# izmir-ulasim-mcp

./: CHANGELOG.md  README.md  deneme.py  index.js  izmir_ulasim_main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
config/: mcp_tools_config.py
data/: eshot-otobus-duraklari.csv  izban-istasyonlar.csv  metro-durak-mesafeleri.csv  processed_cigli_tram_distances.parquet  processed_izban_stations.parquet  processed_karsiyaka_tram_distances.parquet  processed_konak_tram_distances.parquet  processed_metro_distances.parquet  processed_schedules.parquet  processed_stops.parquet  tramvay-cigili-durak-mesafeleri.csv  tramvay-karsiyaka-durak-mesafeleri.csv  tramvay-konak-durak-mesafeleri-sag.csv  tramvay-konak-durak-mesafeleri-sol.csv
files/: eshot-otobus-duraklari.csv  processed_stops.parquet
